# camera_with_cursor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  QT_with_Cursor.pro  README.md  compile_qt_file.bat  run_qt_project.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: AudioManager.cpp  AudioManager.h  AudioPanel.cpp  AudioPanel.h  CameraControlDialog.cpp  CameraControlDialog.h  CameraDeviceInfo.h  CameraUtils.cpp  CameraUtils.h  cam_qt.cpp  cam_qt.h  cam_qt.ui  dbgout.cpp  dbgout.h  main.cpp  test_qt.cpp  test_qt.h  test_qt.ui
